added inquier as dependacy

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Josejpd3/09-Module-Challenge/issues"
   },
-  "homepage": "https://github.com/Josejpd3/09-Module-Challenge#readme"
+  "homepage": "https://github.com/Josejpd3/09-Module-Challenge#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
